 * Compiler warning fixed by ChaosMageX.
 * Help fixes. [MG]
 * The tables mapping color names and RGB values are now generated by a
   script in utils/. [SW]
 * Converting from named colors to the nearest xterm or ansi equivalent is
   much more efficient. [SW]
 * Converting from extended colors to ansi colors is smarter. Based on
   work by Padraic. [SW]

Fixes:
 * %c contained the evaluated input (the same as %u), instead of the
   unevaluated input. Reported by Ingwaz. [MG]
 * repeat() could write partial ANSI tags, causing buffer overflows. From a
   report by Ashen-Shugar. [MG]
 * dbcks didn't reset corrupt exit's source room. Patch by Padriac.

Version 1.8.5 patchlevel 3                                 Aug 23, 2012

Fixes:
 * Fix a crash bug in new color code. Discovered by ChaosMageX, fixed by
   Intrevis and [SW].

Functions:
 * name() with no arguments is now an error. It should always have been, but
   previously returned nothing for backwards compatability. If you still have
   code that relies on that behaviour, you are extremely lazy and should be
   ashamed of yourself. [MG]

Version 1.8.5 patchlevel 2                                 Aug 18, 2012

Hardcode:
 * render_string has been modified to work with multiple output formatters,
   so it can display the appropriate color syntax for the client. [GM]
 * Tweak the networking code to try to reduce output latency/queue size. [SW]

Major changes:
 * 256 Color support. Using 24 bit internally for representation and
   downscaling to the client's possible output values. Use
   SOCKSET colorstyle=xterm256 to see 256 color support, with
   ansi(+colorname/+colorname,...) or ansi(#hexcode/#hexcode) for
   extended color support, or @set me=xterm256. [GM] [MG]
 * New SOCKSET socket command for changing socket options. Replaces the
   @sockset command added in p1 for mortals, and can be used at the
   login screen. Suggested by Sketch. [MG]